# DriftSolver

./: CMakeLists.txt
scripts/: run_dev.sh
src/: main.cpp
src/engine/: DriftEngine.cpp  DriftEngine.h
src/game/: Racer.cpp  Racer.cpp   Racer.h  Road.cpp  Road.h
